[package]
name = "vulkan-tutorial-rust-ash"
version = "0.0.1"
authors = ["odanek <ondrej.danek@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
# panic = 'abort'
# strip = "symbols"

[dependencies]
ash = "0.32.0"
ash-window = "0.6.0"
winit = "0.24.0"
log = "0.4.14"
memoffset = "0.6.1"
image = "0.23.14"
tobj = "2.0.4"