[package]
name = "vulkan-tutorial-rust-ash"
version = "0.0.1"
authors = ["odanek <ondrej.danek@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
# panic = 'abort'
# strip = "symbols"

[dependencies]
ash = "0.33.3"
ash-window = "0.7.0"
winit = "0.25.0"
log = "0.4.14"
memoffset = "0.6.4"
image = "0.23.14"
tobj = "3.2.0"